Corrected color,font, and text size to fit guidelines. Fixed Footer missing syntax in CSS. Aligned heading bars. To do: Stylize Investment Choices section and follow guidelines.

--- a/style.css
+++ b/style.css
@@ -4,27 +4,24 @@
 .headingBarMain {
     display: flex;
     background-color: #1f2937;
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 14px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
     justify-content: center;
     align-items: center;
     height: 80px;
-    color: white;
 }
 .headingBarMain a {
     text-decoration: none;
     width: 120px;
     padding: 15px;
     text-align: center;
-    color: white;
+    color: #e5e7eb;
     margin: 15px;
 }
 /* Change color on hover */
 .headingBarMain a:hover {
     background-color: #ddd;
     color: black;
-
- 
 }
 .logButton {
     display: flex;
@@ -33,7 +30,6 @@
     background-color: green;
     margin: 15px;
     height: 80px;
-    color: white;
 }
 
 .logoFull {
@@ -43,14 +39,45 @@
     
 }
 .mainHomeBanner {
-    background-color: #ddd;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1f2937;
+    padding: 25px;
+}
+.homeText {
+    display: inline-block;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #f9faf8;
+    padding: 35px;
+    max-width: 600px;
+    
+}
+.homeText h1 {
+    font-size: 36px;
+}
+.homeText h4 {
+    font-size: 18px;
 }
 #mainHomePhoto {
     max-width: fit-content;
-    height: 175px;
+    height: 400px;
+    margin: 25px;
 }
-.footer {
+.homeText button {
+    background-color: #3882f6;
+    color: #f9faf8;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 18px;
+    padding: 15px;
+}
+footer {
     background-color: #1f2937;
     padding: 10px;
     display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-family: 'Courier New', Courier, monospace;
 }
